--- a/lib/coffee_web/controllers/page_html/home.html.heex
+++ b/lib/coffee_web/controllers/page_html/home.html.heex
@@ -12,23 +12,23 @@
         v<%= Application.spec(:phoenix, :vsn) %>
       </small>
     </h1>
-    <div class="flex flex-col gap-y-4 mt-8 divide-slate-800">
-      <Text.h1b>
+    <div class="w-full flex flex-col gap-y-4 mt-8 divide-slate-800 overflow-hidden">
+      <Text.h1b ellipsis display="block" tag="h1">
         Everyone has the right to freedom of thought, conscience and religion;
       </Text.h1b>
-      <Text.h1>
+      <Text.h1 ellipsis>
         Everyone has the right to freedom of thought, conscience and religion;
       </Text.h1>
-      <Text.h2>
+      <Text.h2 ellipsis>
         Everyone has the right to freedom of thought, conscience and religion;
       </Text.h2>
-      <Text.h2b>
+      <Text.h2b ellipsis>
         Everyone has the right to freedom of thought, conscience and religion;
       </Text.h2b>
-      <Text.h3b>
+      <Text.h3b ellipsis>
         Everyone has the right to freedom of thought, conscience and religion;
       </Text.h3b>
-      <Text.h3>
+      <Text.h3 ellipsis>
         Everyone has the right to freedom of thought, conscience and religion;
       </Text.h3>
       <Text.h4b>
